--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="profile">
       <img src="images/akk.jpg" alt="akk.jpg-img">
       <h2>Hello.</h2>
-      <p class="intro">I am an Web Developer and video Editor.</p>
+      <p class="intro">I am a Web Developer and video Editor.</p>
     </div>
     <hr>
     <div class="skills">
